Added check on decimal part of CustomerID and casted it into int32

--- a/DataUnderstanding_DataCleaning.ipynb
+++ b/DataUnderstanding_DataCleaning.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 98,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -298,7 +298,7 @@
       "text/plain": "       BasketID      BasketDate  Sale  CustomerID CustomerCountry  ProdID  \\\n0        536365  01/12/10 08:26  2,55     17850.0  United Kingdom  85123A   \n1        536365  01/12/10 08:26  3,39     17850.0  United Kingdom   71053   \n2        536365  01/12/10 08:26  2,75     17850.0  United Kingdom  84406B   \n3        536365  01/12/10 08:26  3,39     17850.0  United Kingdom  84029G   \n4        536365  01/12/10 08:26  3,39     17850.0  United Kingdom  84029E   \n...         ...             ...   ...         ...             ...     ...   \n541905   581587  09/12/11 12:50   2,1     12680.0          France   22899   \n541906   581587  09/12/11 12:50  4,15     12680.0          France   23254   \n541907   581587  09/12/11 12:50  4,15     12680.0          France   23255   \n541908   581587  09/12/11 12:50  4,95     12680.0          France   22138   \n541909   581587  09/12/11 12:50    18     12680.0          France    POST   \n\n                                  ProdDescr  Qta  \n0        WHITE HANGING HEART T-LIGHT HOLDER    6  \n1                       WHITE METAL LANTERN    6  \n2            CREAM CUPID HEARTS COAT HANGER    8  \n3       KNITTED UNION FLAG HOT WATER BOTTLE    6  \n4            RED WOOLLY HOTTIE WHITE HEART.    6  \n...                                     ...  ...  \n541905         CHILDREN'S APRON DOLLY GIRL     6  \n541906        CHILDRENS CUTLERY DOLLY GIRL     4  \n541907      CHILDRENS CUTLERY CIRCUS PARADE    4  \n541908        BAKING SET 9 PIECE RETROSPOT     3  \n541909                              POSTAGE    1  \n\n[466678 rows x 8 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>BasketID</th>\n      <th>BasketDate</th>\n      <th>Sale</th>\n      <th>CustomerID</th>\n      <th>CustomerCountry</th>\n      <th>ProdID</th>\n      <th>ProdDescr</th>\n      <th>Qta</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>2,55</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>85123A</td>\n      <td>WHITE HANGING HEART T-LIGHT HOLDER</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>3,39</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>71053</td>\n      <td>WHITE METAL LANTERN</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>2,75</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>84406B</td>\n      <td>CREAM CUPID HEARTS COAT HANGER</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>3,39</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>84029G</td>\n      <td>KNITTED UNION FLAG HOT WATER BOTTLE</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>3,39</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>84029E</td>\n      <td>RED WOOLLY HOTTIE WHITE HEART.</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>541905</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>2,1</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>22899</td>\n      <td>CHILDREN'S APRON DOLLY GIRL</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>541906</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>4,15</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>23254</td>\n      <td>CHILDRENS CUTLERY DOLLY GIRL</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>541907</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>4,15</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>23255</td>\n      <td>CHILDRENS CUTLERY CIRCUS PARADE</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>541908</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>4,95</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>22138</td>\n      <td>BAKING SET 9 PIECE RETROSPOT</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>541909</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>18</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>POST</td>\n      <td>POSTAGE</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>466678 rows × 8 columns</p>\n</div>"
      },
-     "execution_count": 69,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 99,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 100,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -398,7 +398,7 @@
      "data": {
       "text/plain": "<AxesSubplot:>"
      },
-     "execution_count": 71,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 101,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -492,12 +492,14 @@
    },
    "source": [
     "### Analyzing _CustomerID_:\n",
-    "* Check for how many orders it's not possible to find a _CustomerID_"
+    "* Check for how many orders it's not possible to find a _CustomerID_\n",
+    "* Remove entries with no retrievable _CustomerID_\n",
+    "* Make _CustomerID_ of type **int**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 102,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -545,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 103,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -568,6 +570,89 @@
     "print(f\"The dataframe contains now {len(df)} rows\")\n",
     "print(f\"Remaining entries with a NaN CustomerID: {len(df[pd.isna(df['CustomerID'])])}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of CustomerIDs with decimal part != 0:  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check if the decimal part is always 0\n",
+    "count_decpart_nonzero = 0\n",
+    "for elem in df['CustomerID']:\n",
+    "    if elem % 1.0 != 0.0 and not pd.isnull(elem):\n",
+    "        count_decpart_nonzero += 1\n",
+    "print('Number of CustomerIDs with decimal part != 0: ', count_decpart_nonzero)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17850\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "BasketID            object\nBasketDate          object\nSale               float64\nCustomerID           int32\nCustomerCountry     object\nProdID              object\nProdDescr           object\nQta                  int64\ndtype: object"
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make 'CustomerID' of type int\n",
+    "if count_decpart_nonzero == 0:\n",
+    "    df = df.astype({'CustomerID': int})\n",
+    "\n",
+    "df.dtypes"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17850.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.iloc[0]['CustomerID'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -670,8 +755,7 @@
     "print(\"The negative entries which are not matched are: \", count_not_paired)\n",
     "print(\"The negative entries which are matched are: \", count_pairs)\n",
     "assert(len(df[df['Qta'] < 0]) == count_not_paired + count_pairs)\n",
-    "print(\"The legal negative entries are: \", count_legal_pairs)\n",
-    "#print(\"All negative entries has a positive one: \", False)"
+    "print(\"The legal negative entries are: \", count_legal_pairs)"
    ],
    "metadata": {
     "collapsed": false,
@@ -725,43 +809,7 @@
     }
    },
    "source": [
-    "#### Checking 'BasketID':"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of rows with BasketID starting with \"C\" and positive Qta:  0\n"
-     ]
-    }
-   ],
-   "source": [
-    "counter = 0\n",
-    "for index, row in df.iterrows():\n",
-    "    if row['BasketID'][0] == 'C' and row['Qta'] >= 0:\n",
-    "        counter += 1\n",
-    "print('Number of rows with BasketID starting with \"C\" and positive Qta: ', counter)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "Every BaskedID starting with \"C\" is associated with a negative value in the Qta attrbute\n",
+    "Every BaskedID starting with \"C\" is associated with a negative value in the Qta attribute\n",
     "\n",
     "#### Checking 'CustomerID':\n",
     "\n",
