Added saving of cleaned csv

--- a/DataUnderstanding_DataCleaning.ipynb
+++ b/DataUnderstanding_DataCleaning.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -295,193 +295,10 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>BasketID</th>\n",
-       "      <th>BasketDate</th>\n",
-       "      <th>Sale</th>\n",
-       "      <th>CustomerID</th>\n",
-       "      <th>CustomerCountry</th>\n",
-       "      <th>ProdID</th>\n",
-       "      <th>ProdDescr</th>\n",
-       "      <th>Qta</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>536365</td>\n",
-       "      <td>01/12/10 08:26</td>\n",
-       "      <td>2,55</td>\n",
-       "      <td>17850.0</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>85123A</td>\n",
-       "      <td>WHITE HANGING HEART T-LIGHT HOLDER</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>536365</td>\n",
-       "      <td>01/12/10 08:26</td>\n",
-       "      <td>3,39</td>\n",
-       "      <td>17850.0</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>71053</td>\n",
-       "      <td>WHITE METAL LANTERN</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>536365</td>\n",
-       "      <td>01/12/10 08:26</td>\n",
-       "      <td>2,75</td>\n",
-       "      <td>17850.0</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>84406B</td>\n",
-       "      <td>CREAM CUPID HEARTS COAT HANGER</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>536365</td>\n",
-       "      <td>01/12/10 08:26</td>\n",
-       "      <td>3,39</td>\n",
-       "      <td>17850.0</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>84029G</td>\n",
-       "      <td>KNITTED UNION FLAG HOT WATER BOTTLE</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>536365</td>\n",
-       "      <td>01/12/10 08:26</td>\n",
-       "      <td>3,39</td>\n",
-       "      <td>17850.0</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "      <td>84029E</td>\n",
-       "      <td>RED WOOLLY HOTTIE WHITE HEART.</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541905</th>\n",
-       "      <td>581587</td>\n",
-       "      <td>09/12/11 12:50</td>\n",
-       "      <td>2,1</td>\n",
-       "      <td>12680.0</td>\n",
-       "      <td>France</td>\n",
-       "      <td>22899</td>\n",
-       "      <td>CHILDREN'S APRON DOLLY GIRL</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541906</th>\n",
-       "      <td>581587</td>\n",
-       "      <td>09/12/11 12:50</td>\n",
-       "      <td>4,15</td>\n",
-       "      <td>12680.0</td>\n",
-       "      <td>France</td>\n",
-       "      <td>23254</td>\n",
-       "      <td>CHILDRENS CUTLERY DOLLY GIRL</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541907</th>\n",
-       "      <td>581587</td>\n",
-       "      <td>09/12/11 12:50</td>\n",
-       "      <td>4,15</td>\n",
-       "      <td>12680.0</td>\n",
-       "      <td>France</td>\n",
-       "      <td>23255</td>\n",
-       "      <td>CHILDRENS CUTLERY CIRCUS PARADE</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541908</th>\n",
-       "      <td>581587</td>\n",
-       "      <td>09/12/11 12:50</td>\n",
-       "      <td>4,95</td>\n",
-       "      <td>12680.0</td>\n",
-       "      <td>France</td>\n",
-       "      <td>22138</td>\n",
-       "      <td>BAKING SET 9 PIECE RETROSPOT</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541909</th>\n",
-       "      <td>581587</td>\n",
-       "      <td>09/12/11 12:50</td>\n",
-       "      <td>18</td>\n",
-       "      <td>12680.0</td>\n",
-       "      <td>France</td>\n",
-       "      <td>POST</td>\n",
-       "      <td>POSTAGE</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>466678 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       BasketID      BasketDate  Sale  CustomerID CustomerCountry  ProdID  \\\n",
-       "0        536365  01/12/10 08:26  2,55     17850.0  United Kingdom  85123A   \n",
-       "1        536365  01/12/10 08:26  3,39     17850.0  United Kingdom   71053   \n",
-       "2        536365  01/12/10 08:26  2,75     17850.0  United Kingdom  84406B   \n",
-       "3        536365  01/12/10 08:26  3,39     17850.0  United Kingdom  84029G   \n",
-       "4        536365  01/12/10 08:26  3,39     17850.0  United Kingdom  84029E   \n",
-       "...         ...             ...   ...         ...             ...     ...   \n",
-       "541905   581587  09/12/11 12:50   2,1     12680.0          France   22899   \n",
-       "541906   581587  09/12/11 12:50  4,15     12680.0          France   23254   \n",
-       "541907   581587  09/12/11 12:50  4,15     12680.0          France   23255   \n",
-       "541908   581587  09/12/11 12:50  4,95     12680.0          France   22138   \n",
-       "541909   581587  09/12/11 12:50    18     12680.0          France    POST   \n",
-       "\n",
-       "                                  ProdDescr  Qta  \n",
-       "0        WHITE HANGING HEART T-LIGHT HOLDER    6  \n",
-       "1                       WHITE METAL LANTERN    6  \n",
-       "2            CREAM CUPID HEARTS COAT HANGER    8  \n",
-       "3       KNITTED UNION FLAG HOT WATER BOTTLE    6  \n",
-       "4            RED WOOLLY HOTTIE WHITE HEART.    6  \n",
-       "...                                     ...  ...  \n",
-       "541905         CHILDREN'S APRON DOLLY GIRL     6  \n",
-       "541906        CHILDRENS CUTLERY DOLLY GIRL     4  \n",
-       "541907      CHILDRENS CUTLERY CIRCUS PARADE    4  \n",
-       "541908        BAKING SET 9 PIECE RETROSPOT     3  \n",
-       "541909                              POSTAGE    1  \n",
-       "\n",
-       "[466678 rows x 8 columns]"
-      ]
+      "text/plain": "       BasketID      BasketDate  Sale  CustomerID CustomerCountry  ProdID  \\\n0        536365  01/12/10 08:26  2,55     17850.0  United Kingdom  85123A   \n1        536365  01/12/10 08:26  3,39     17850.0  United Kingdom   71053   \n2        536365  01/12/10 08:26  2,75     17850.0  United Kingdom  84406B   \n3        536365  01/12/10 08:26  3,39     17850.0  United Kingdom  84029G   \n4        536365  01/12/10 08:26  3,39     17850.0  United Kingdom  84029E   \n...         ...             ...   ...         ...             ...     ...   \n541905   581587  09/12/11 12:50   2,1     12680.0          France   22899   \n541906   581587  09/12/11 12:50  4,15     12680.0          France   23254   \n541907   581587  09/12/11 12:50  4,15     12680.0          France   23255   \n541908   581587  09/12/11 12:50  4,95     12680.0          France   22138   \n541909   581587  09/12/11 12:50    18     12680.0          France    POST   \n\n                                  ProdDescr  Qta  \n0        WHITE HANGING HEART T-LIGHT HOLDER    6  \n1                       WHITE METAL LANTERN    6  \n2            CREAM CUPID HEARTS COAT HANGER    8  \n3       KNITTED UNION FLAG HOT WATER BOTTLE    6  \n4            RED WOOLLY HOTTIE WHITE HEART.    6  \n...                                     ...  ...  \n541905         CHILDREN'S APRON DOLLY GIRL     6  \n541906        CHILDRENS CUTLERY DOLLY GIRL     4  \n541907      CHILDRENS CUTLERY CIRCUS PARADE    4  \n541908        BAKING SET 9 PIECE RETROSPOT     3  \n541909                              POSTAGE    1  \n\n[466678 rows x 8 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>BasketID</th>\n      <th>BasketDate</th>\n      <th>Sale</th>\n      <th>CustomerID</th>\n      <th>CustomerCountry</th>\n      <th>ProdID</th>\n      <th>ProdDescr</th>\n      <th>Qta</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>2,55</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>85123A</td>\n      <td>WHITE HANGING HEART T-LIGHT HOLDER</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>3,39</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>71053</td>\n      <td>WHITE METAL LANTERN</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>2,75</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>84406B</td>\n      <td>CREAM CUPID HEARTS COAT HANGER</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>3,39</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>84029G</td>\n      <td>KNITTED UNION FLAG HOT WATER BOTTLE</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>3,39</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>84029E</td>\n      <td>RED WOOLLY HOTTIE WHITE HEART.</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>541905</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>2,1</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>22899</td>\n      <td>CHILDREN'S APRON DOLLY GIRL</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>541906</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>4,15</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>23254</td>\n      <td>CHILDRENS CUTLERY DOLLY GIRL</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>541907</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>4,15</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>23255</td>\n      <td>CHILDRENS CUTLERY CIRCUS PARADE</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>541908</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>4,95</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>22138</td>\n      <td>BAKING SET 9 PIECE RETROSPOT</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>541909</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>18</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>POST</td>\n      <td>POSTAGE</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>466678 rows × 8 columns</p>\n</div>"
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -635,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -686,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -734,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -760,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -786,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -795,19 +612,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "BasketID            object\n",
-       "BasketDate          object\n",
-       "Sale               float64\n",
-       "CustomerID           int32\n",
-       "CustomerCountry     object\n",
-       "ProdID              object\n",
-       "ProdDescr           object\n",
-       "Qta                  int64\n",
-       "dtype: object"
-      ]
+      "text/plain": "BasketID            object\nBasketDate          object\nSale               float64\nCustomerID           int32\nCustomerCountry     object\nProdID              object\nProdDescr           object\nQta                  int64\ndtype: object"
      },
-     "execution_count": 11,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,27 +625,6 @@
     "    df = df.astype({'CustomerID': int})\n",
     "\n",
     "df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17850\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df.iloc[0]['CustomerID'])"
    ]
   },
   {
@@ -854,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -903,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -951,29 +737,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POST\n",
-      "D\n",
-      "C2\n",
-      "M\n",
-      "BANK CHARGES\n",
-      "PADS\n",
-      "DOT\n",
-      "CRUK\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
-    "import re\n",
-    "for prod in df[\"ProdID\"].unique():\n",
-    "    if re.match(\"[0-9]{1,}[!0-9]\", prod) == None:\n",
-    "        print(prod)"
+    "**Save cleaned dataframe in a csv**"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [],
+   "source": [
+    "df.to_csv('cleaned_dataframe.csv', sep='\\t')"
    ],
    "metadata": {
     "collapsed": false,
