--- a/DataUnderstanding_DataCleaning.ipynb
+++ b/DataUnderstanding_DataCleaning.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -68,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "BasketID            object\nBasketDate          object\nSale                object\nCustomerID         float64\nCustomerCountry     object\nProdID              object\nProdDescr           object\nQta                  int64\ndtype: object"
      },
-     "execution_count": 3,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -132,7 +132,7 @@
      "data": {
       "text/plain": "BasketID           False\nBasketDate         False\nSale               False\nCustomerID          True\nCustomerCountry    False\nProdID             False\nProdDescr           True\nQta                False\ndtype: bool"
      },
-     "execution_count": 5,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
       "text/plain": "          CustomerID            Qta\ncount  401605.000000  466678.000000\nmean    15281.154341      10.806528\nstd      1714.008869     232.627771\nmin     12346.000000  -80995.000000\n25%     13939.000000       2.000000\n50%     15145.000000       4.000000\n75%     16784.000000      12.000000\nmax     18287.000000   80995.000000",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CustomerID</th>\n      <th>Qta</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>401605.000000</td>\n      <td>466678.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>15281.154341</td>\n      <td>10.806528</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>1714.008869</td>\n      <td>232.627771</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>12346.000000</td>\n      <td>-80995.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>13939.000000</td>\n      <td>2.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>15145.000000</td>\n      <td>4.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>16784.000000</td>\n      <td>12.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>18287.000000</td>\n      <td>80995.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 6,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -201,7 +201,7 @@
       "text/plain": "       BasketID      BasketDate  Sale  CustomerID CustomerCountry  ProdID  \\\n0        536365  01/12/10 08:26  2,55     17850.0  United Kingdom  85123A   \n1        536365  01/12/10 08:26  3,39     17850.0  United Kingdom   71053   \n2        536365  01/12/10 08:26  2,75     17850.0  United Kingdom  84406B   \n3        536365  01/12/10 08:26  3,39     17850.0  United Kingdom  84029G   \n4        536365  01/12/10 08:26  3,39     17850.0  United Kingdom  84029E   \n...         ...             ...   ...         ...             ...     ...   \n541905   581587  09/12/11 12:50   2,1     12680.0          France   22899   \n541906   581587  09/12/11 12:50  4,15     12680.0          France   23254   \n541907   581587  09/12/11 12:50  4,15     12680.0          France   23255   \n541908   581587  09/12/11 12:50  4,95     12680.0          France   22138   \n541909   581587  09/12/11 12:50    18     12680.0          France    POST   \n\n                                  ProdDescr  Qta  \n0        WHITE HANGING HEART T-LIGHT HOLDER    6  \n1                       WHITE METAL LANTERN    6  \n2            CREAM CUPID HEARTS COAT HANGER    8  \n3       KNITTED UNION FLAG HOT WATER BOTTLE    6  \n4            RED WOOLLY HOTTIE WHITE HEART.    6  \n...                                     ...  ...  \n541905         CHILDREN'S APRON DOLLY GIRL     6  \n541906        CHILDRENS CUTLERY DOLLY GIRL     4  \n541907      CHILDRENS CUTLERY CIRCUS PARADE    4  \n541908        BAKING SET 9 PIECE RETROSPOT     3  \n541909                              POSTAGE    1  \n\n[466678 rows x 8 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>BasketID</th>\n      <th>BasketDate</th>\n      <th>Sale</th>\n      <th>CustomerID</th>\n      <th>CustomerCountry</th>\n      <th>ProdID</th>\n      <th>ProdDescr</th>\n      <th>Qta</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>2,55</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>85123A</td>\n      <td>WHITE HANGING HEART T-LIGHT HOLDER</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>3,39</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>71053</td>\n      <td>WHITE METAL LANTERN</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>2,75</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>84406B</td>\n      <td>CREAM CUPID HEARTS COAT HANGER</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>3,39</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>84029G</td>\n      <td>KNITTED UNION FLAG HOT WATER BOTTLE</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>536365</td>\n      <td>01/12/10 08:26</td>\n      <td>3,39</td>\n      <td>17850.0</td>\n      <td>United Kingdom</td>\n      <td>84029E</td>\n      <td>RED WOOLLY HOTTIE WHITE HEART.</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>541905</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>2,1</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>22899</td>\n      <td>CHILDREN'S APRON DOLLY GIRL</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>541906</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>4,15</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>23254</td>\n      <td>CHILDRENS CUTLERY DOLLY GIRL</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>541907</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>4,15</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>23255</td>\n      <td>CHILDRENS CUTLERY CIRCUS PARADE</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>541908</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>4,95</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>22138</td>\n      <td>BAKING SET 9 PIECE RETROSPOT</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>541909</th>\n      <td>581587</td>\n      <td>09/12/11 12:50</td>\n      <td>18</td>\n      <td>12680.0</td>\n      <td>France</td>\n      <td>POST</td>\n      <td>POSTAGE</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>466678 rows × 8 columns</p>\n</div>"
      },
-     "execution_count": 8,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -301,7 +301,7 @@
      "data": {
       "text/plain": "<AxesSubplot:>"
      },
-     "execution_count": 10,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 62,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 63,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 64,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 65,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -513,7 +513,7 @@
      "data": {
       "text/plain": "BasketID            object\nBasketDate          object\nSale               float64\nCustomerID           int32\nCustomerCountry     object\nProdID              object\nProdDescr           object\nQta                  int64\ndtype: object"
      },
-     "execution_count": 15,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 66,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 67,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -638,6 +638,132 @@
   {
    "cell_type": "markdown",
    "source": [
+    "Further checks on entries with a negative quantity.<br>\n",
+    "We assume them to be returned products, but we need to check that every \"negative\" product\n",
+    "has a corresponding \"positive\" one. Moreover it's necessary to be sure that the |(quantity * price)| of a\n",
+    "returned product is <= of (quantity * price) of a corresponding bought one"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "outputs": [],
+   "source": [
+    "# Initialize variables to analyze correctness of negative Qta rows\n",
+    "# Dictionaries indexed by tuple (CustomerID, ProdID, Sale), value is Qta (or (Qta, list(indexes)) )\n",
+    "pos_quant_tot = {}\n",
+    "neg_quant_tot = {}\n",
+    "\n",
+    "for index, row in df.iterrows():\n",
+    "    if row['Qta'] > 0:\n",
+    "        if (row['CustomerID'], row['ProdID'], row['Sale']) not in pos_quant_tot.keys():\n",
+    "            pos_quant_tot[(row['CustomerID'], row['ProdID'], row['Sale'])] = row['Qta']\n",
+    "        else:\n",
+    "            pos_quant_tot[(row['CustomerID'], row['ProdID'], row['Sale'])] += row['Qta']\n",
+    "    else:\n",
+    "        if (row['CustomerID'], row['ProdID'], row['Sale']) not in neg_quant_tot.keys():\n",
+    "            l = [index]\n",
+    "            neg_quant_tot[(row['CustomerID'], row['ProdID'], row['Sale'])] = (-1*row['Qta'], l)\n",
+    "        else:\n",
+    "            prev = neg_quant_tot[(row['CustomerID'], row['ProdID'], row['Sale'])]\n",
+    "            prev[1].append(index)\n",
+    "            neg_quant_tot[(row['CustomerID'], row['ProdID'], row['Sale'])] = (prev[0]-row['Qta'], prev[1])\n",
+    "\n",
+    "positive_elements = set(pos_quant_tot.keys())\n",
+    "negative_elements = set(neg_quant_tot.keys())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "outputs": [],
+   "source": [
+    "# drop negative Qta rows that are not matched with positive ones\n",
+    "not_valid = negative_elements - (positive_elements & negative_elements)\n",
+    "indexes_todelete = []\n",
+    "for key in not_valid:\n",
+    "    for x in neg_quant_tot[key][1]:\n",
+    "        indexes_todelete.append(x)\n",
+    "df.drop(indexes_todelete, inplace=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "outputs": [],
+   "source": [
+    "# drop negative Qta rows that are invalid neg_qta > pos_qta\n",
+    "indexes_todelete = []\n",
+    "for key in positive_elements & negative_elements:\n",
+    "    if pos_quant_tot[key] < neg_quant_tot[key][0]:\n",
+    "            for x in neg_quant_tot[key][1]:\n",
+    "                indexes_todelete.append(x)\n",
+    "df.drop(indexes_todelete, inplace=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 400220 entries, 0 to 541909\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column           Non-Null Count   Dtype  \n",
+      "---  ------           --------------   -----  \n",
+      " 0   BasketID         400220 non-null  object \n",
+      " 1   BasketDate       400220 non-null  object \n",
+      " 2   Sale             400220 non-null  float64\n",
+      " 3   CustomerID       400220 non-null  int32  \n",
+      " 4   CustomerCountry  400220 non-null  object \n",
+      " 5   ProdID           400220 non-null  object \n",
+      " 6   ProdDescr        400220 non-null  object \n",
+      " 7   Qta              400220 non-null  int64  \n",
+      "dtypes: float64(1), int32(1), int64(1), object(5)\n",
+      "memory usage: 26.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "**Save cleaned dataframe in a csv**"
    ],
    "metadata": {
@@ -649,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 72,
    "outputs": [],
    "source": [
     "df.to_csv('cleaned_dataframe.csv', sep='\\t')"
